--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: sqflite_auto_migration
 description: auto generate migration script for sqflite
-version: 0.0.1
+version: 1.0.0
 author: Goxiaoy <xy1996mail@gmail.com>
-homepage: https://github.com/Goxiaoy/sqflite_auto_migration
+homepage: https://github.com/Goxiaoy/sqflite_migration
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -13,7 +13,7 @@ dependencies:
   build: '>=0.12.0 <2.0.0'
   source_gen: ^0.9.0
   sqflite: ^1.1.6
-  mustache4dart: any
+  mustache4dart: '>=3.0.0-dev.0.0'
 
 dev_dependencies:
   build_test: ^0.10.0
