--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sqflite_auto_migration
-description: Auto generate migration script for sqflite. Use source_gen and build_runner to auto generate migration function for sqlite by using override migration class and annotated with version number
-version: 1.0.0
+description: Use source_gen and build_runner to auto generate migration function for sqlite by using override migration class and annotated with version number
+version: 1.0.1
 author: Goxiaoy <xy1996mail@gmail.com>
 homepage: https://github.com/Goxiaoy/sqflite_migration
 
@@ -13,7 +13,7 @@ dependencies:
   build: '>=0.12.0 <2.0.0'
   source_gen: ^0.9.0
   sqflite: ^1.1.6
-  mustache4dart: '>=3.0.0-dev.0.0'
+  mustache4dart: '^3.0.0-dev.0.0'
 
 dev_dependencies:
   build_test: ^0.10.0
